# ChangeLog for app-emacs/bbdb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/ChangeLog,v 1.43 2014/07/28 16:33:40 ulm Exp $

*bbdb-3.1.2 (28 Jul 2014)

  28 Jul 2014; Ulrich Müller <ulm@gentoo.org> +bbdb-3.1.2.ebuild,
  +files/bbdb-3.1.2-no-init.patch, +files/50bbdb-gentoo-3.1.2.el, metadata.xml:
  Version bump, bug 511572.

  25 Sep 2012; Ulrich Müller <ulm@gentoo.org> bbdb-2.35-r1.ebuild:
  Specify LICENSE more precisely. Bump ebuild to EAPI 4.

  24 Nov 2009; Christian Faulhammer <fauli@gentoo.org> bbdb-2.35-r1.ebuild:
  import changes from Prefix overlay

  01 Nov 2008; Ulrich Mueller <ulm@gentoo.org> -bbdb-2.35.ebuild:
  Remove old.

  01 Nov 2008; nixnut <nixnut@gentoo.org> bbdb-2.35-r1.ebuild:
  Stable on ppc wrt bug 244687

  30 Oct 2008; Raúl Porcel <armin76@gentoo.org> bbdb-2.35-r1.ebuild:
  alpha stable #244687

  29 Oct 2008; Markus Meier <maekke@gentoo.org> bbdb-2.35-r1.ebuild:
  amd64/x86 stable, bug #244687

  27 Oct 2008; Ferris McCormick <fmccor@gentoo.org> bbdb-2.35-r1.ebuild:
  Sparc stable, Bug #244687.

*bbdb-2.35-r1 (23 Sep 2008)

  23 Sep 2008; Ulrich Mueller <ulm@gentoo.org> +bbdb-2.35-r1.ebuild:
  Install TeX support files under texmf-site/tex/plain. Simplify code for
  byte-compilation of contributed files.

  28 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  12 Apr 2008; Ulrich Mueller <ulm@gentoo.org> bbdb-2.35.ebuild:
  Finally drop tetex USE flag, bug #196745.

  20 Mar 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add longdescription to metadata.

  24 Nov 2007; Ulrich Mueller <ulm@gentoo.org> bbdb-2.35.ebuild:
  Change RDEPEND from latex-base to tex-base.

  21 Nov 2007; Ulrich Mueller <ulm@gentoo.org> bbdb-2.35.ebuild:
  Add tex USE flag, bug #196745. Keep tetex flag for a transition period.

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>